# til-23-cv

./: .gitignore  .gitmodules  README.md  data.ipynb  pyproject.toml  requirements.txt  setup.sh
cfg/: custom.yaml  reid.yaml  yolov5x6u_mvp.yaml
notebooks/: data.ipynb  dev.ipynb  infer.ipynb  reid.ipynb  yolo.ipynb
til_23_cv/: __init__.py  arcface.py  reid.py  reid_data.py  utils.py
til_23_cv/reid/: __init__.py  __main__.py  data.py  model.py
