[tool.poetry]
name = "til-23-cv"
version = "0.1.0"
description = "DSTA BrainHack TIL 2023 Qualifiers Computer Vision Task Code"
authors = ["John-Henry Lim <42513874+Interpause@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "til_23_cv"}]

[tool.poetry.dependencies]
python = "^3.9"
torch = "^2.0.1"
torchvision = "^0.15.2"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
isort = "^5.12.0"
pydocstyle = "^6.3.0"
mypy = "^1.3.0"
ipykernel = "^6.23.1"
ipywidgets = "^8.0.6"
matplotlib = "^3.7.1"
ipympl = "^0.9.3"

[tool.poetry.group.nvidia.dependencies]
nvidia-cublas-cu11 = "^11.11.3.6"
nvidia-cuda-cupti-cu11 = "^11.8.87"
nvidia-cuda-nvrtc-cu11 = "^11.8.89"
nvidia-cuda-runtime-cu11 = "^11.8.89"
nvidia-cudnn-cu11 = "^8.9.1.23"
nvidia-cufft-cu11 = "^10.9.0.58"
nvidia-curand-cu11 = "^10.3.0.86"
nvidia-cusolver-cu11 = "^11.4.1.48"
nvidia-cusparse-cu11 = "^11.7.5.86"
nvidia-nccl-cu11 = "^2.16.5"
nvidia-nvtx-cu11 = "^11.8.86"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
