[tool.poetry]
name = "til-23-cv"
version = "0.1.0"
description = "DSTA BrainHack TIL 2023 Qualifiers Computer Vision Task Code"
authors = ["John-Henry Lim <42513874+Interpause@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "til_23_cv"}]

[tool.poetry.dependencies]
python = "3.9.*"
torch = "2.0.0"
torchvision = "0.15.1"
numpy = "1.24.3"
timm = "0.9.2"
# transformers = "^4.29.2"
# hydra-core = "^1.3.2"
# rich = "^13.3.5"
ultralytics = { path = "./ultralytics", develop = true }
lightning = "2.0.2"
scikit-learn = "1.2.2"

[tool.poetry.group.dev.dependencies]
black = "23.3.0"
isort = "5.12.0"
pydocstyle = "6.3.0"
mypy = "1.3.0"
ipykernel = "6.23.1"
ipywidgets = "8.0.6"
matplotlib = "3.7.1"
ipympl = "0.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
